# meson-example

./: main.c  meson.build  mylib.c  mylib.h  mylib.map
